--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,6 @@
         "module": "commonjs",
         "target": "es6",
         "noImplicitAny": false,
-        "sourceMap": true,
-        "paths": {
-            "include":["src"],
-            "exclude":["node_modles", "config", "ssl"]
-        }
+        "sourceMap": true
     }
 }
